src/test/deca/context/valid/sansObjet/IntegerAffectation.deca
{
    int x = 2020;
    x = 2;
    print(x);
}