src/test/deca/context/invalid/sansObjet/Undeclared3.deca
{
    int x = 2020;
    print(W);
}